<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>BORGCalendar</groupId>
	<artifactId>BORGCalendar</artifactId>
	<version>1.10</version>
	<packaging>pom</packaging>
	<url>http://mbcsoft.com</url>
	<inceptionYear>2003</inceptionYear>
	<organization>
		<name>Michael Berger</name>
	</organization>
	<licenses>
		<license>
			<name>GNU General Public License - Version 2</name>
			<url>http://www.gnu.org/licenses/gpl-2.0.html</url>
			<distribution>repo</distribution>			
		</license>
	</licenses>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<modules>
		<module>common</module>
		<module>model</module>
		<module>swingui</module>
		<module>install</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<!-- Project to project dependencies. -->
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>common</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>model</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>swingui</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.32</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
				
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>